# kedro-pycafe-data

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  kedro-viz.yml  snowflake_queries.yml
conf/base/: catalog.yml  credentials.yml  parameters_telemetry_data.yml
data/02_intermediate/: cohort_retention.csv  downloads_by_country.csv  experimental_dataset_usage_monthly.csv  experimental_dataset_usage_summary.csv  experimental_tool_usage_monthly.csv  experimental_tool_usage_summary.csv  kedro_commands_mau.csv  kedro_plugins_mau.csv  mau_kedro.csv  new_kedro_users_monthly.csv  pypi_kedro_downloads.csv  pypi_plugin_downloads.csv
docs/plugin-downloads/: README.md
src/kedro_pycafe_data/: __init__.py  __main__.py
src/kedro_pycafe_data/datasets/ibis/: __init__.py
src/kedro_pycafe_data/pipelines/data_transfer/: nodes.py  pipeline.py
src/kedro_pycafe_data/pipelines/telemetry_data/: nodes.py  pipeline.py
tests/: test_catalog.py
tests/pipelines/telemetry_data/: heap_any_command_run.csv  heap_project_statistics.csv  test_pipeline.py
