[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "kedro_pycafe_data"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=1.0.0", "kedro-datasets[ibis-snowflake]",]

[dependency-groups]
dev = [
  "kedro-datasets[ibis-duckdb]",
  "pytest",
]

[project.scripts]
kedro-pycafe-data = "kedro_pycafe_data.__main__:main"

[tool.kedro]
package_name = "kedro_pycafe_data"
project_name = "kedro-pycafe-data"
kedro_init_version = "1.0.0"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "kedro_pycafe_data.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "f57885ae934d4103b36d897ad8cfa9c0"
