[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "kedro-pycafe-data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "ipython>=8.10",
  "jupyterlab>=4.5.9",
  "kedro~=1.0.0",
  "kedro-datasets[ibis-snowflake]>=9.4",
  "notebook",
]

[project.scripts]
kedro-pycafe-data = "kedro_pycafe_data.__main__:main"

[dependency-groups]
dev = [
  "kedro-datasets[ibis-duckdb]",
  "kedro-viz",
  "pyproject-fmt>=2.22",
  "pytest",
  "ruff",
]

[tool.setuptools]
[tool.setuptools.dynamic]
version.attr = "kedro_pycafe_data.__version__"

[tool.setuptools.packages]
find.where = [
  "src",
]
find.namespaces = false

[tool.ruff]
src = [ "src" ]

[tool.ruff.lint]
preview = true

[tool.pyproject-fmt]
table_format = "long"
sub_table_spacing = "\n"

[tool.kedro]
package_name = "kedro_pycafe_data"
project_name = "kedro-pycafe-data"
kedro_init_version = "1.0.0"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[tool.kedro_telemetry]
project_id = "f57885ae934d4103b36d897ad8cfa9c0"
